--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "js-sha256": "^0.9.0",
     "mqtt": "^4.3.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
